--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ai-sdk/groq": "^0.0.3",
     "@ai-sdk/openai": "^0.0.71",
     "@hookform/resolvers": "^3.9.1",
     "@radix-ui/react-icons": "^1.3.1",
@@ -19,6 +20,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "data-fns": "^1.1.0",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.454.0",
     "next": "15.0.2",
     "react": "19.0.0-rc-02c0e824-20241028",
